[tool.poetry]
name = "pfzy"
version = "0.1.0"
description = "Python port of fzy fuzzy string matching logic"
authors = ["Kevin Zhuang <kevin7441@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pre-commit = "^2.14.0"
pydocstyle = "^6.1.1"
isort = "^5.9.3"
black = "^21.7b0"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-asyncio = "^0.15.1"

[tool.isort]
profile = "black"

[tool.pydocstyle]
convention = "pep257"
add_ignore = "D104"

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
